--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,14 +12,14 @@ source:
 build:
   noarch: python
   number: 0
-  script: cd {{ RECIPE_DIR }} && {{ PYTHON }} builder.py
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python >=3.8
   run:
-    - python >=3.7
+    - python >=3.8
     - typing_extensions
 
 test:
